# pirate

./: package-lock.json  package.json  puppy.torrent
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  config.rs  decoder.rs  hash.rs  main.rs  message.rs  parser.rs  read_torrent.rs  read_torrents.rs  tracker.rs
src-tauri/src/commands/: add_torrent.rs  all_pieces_downloaded.rs  mod.rs  parse_pieces_status.rs  start_torrent.rs
src-tauri/src/message_handling/: message_error.rs  message_handling.rs  message_payload.rs  mod.rs
src-tauri/src/network/: mod.rs  peer_connection.rs  peer_handshake.rs
src-tauri/src/parsing/: decoder.rs  parser.rs
src-tauri/src/parsing/parser/: mod.rs  parse_error.rs  torrent_metadata.rs
src-tauri/src/torrent_management/: file_io.rs  message.rs  mod.rs  peer_connection.rs  peers.rs  torrent.rs  torrent_manager.rs  torrent_status.rs
src-tauri/src/torrent_management/message/: message.rs
src-tauri/src/tracker/: tracker.rs
