[package]
name = "pirate"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2.0"
sha1 = "0.10.5"
url = "2.3.1"
byteorder = "1.4.3"
tempfile = "3.6.0"
tokio = { version = "1", features = ["full", "test-util"] }
futures = "0.3.28"
anyhow = "1.0.71"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
